# telegram-url-to-screenshot-bot

./: .gitignore  config.py  exceptions.py  main.py  parsing.py  setup.py
telegram-url-to-screenshot/: README.md  config.py  main.py
telegram_url_to_screenshot/: .gitignore  config.py  parsing.py  pyproject.toml
